refactor: 자동차 위치 클래스 추가 및 우승자 계산 로직 수정
Car 클래스에 차를 움직이면서 발생하는 위치에 대한 변경도 있었습니다. 그래서 차를 움직이는 것만 명확하게 하기 위해서 위치만 따로 관리하는 클래스를 분리했습니다. 또한 max의 계산로직이 위치값을 넘겨주는 것이 getter와 같은 기능을 했습니다. 그래서 차들이 직접 비교할 수 있게 우승자 계산 로직을 수정했습니다